Started adding javadocs